Fixed Windows compilation

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,8 +5,7 @@ project(SnipBoard VERSION 0.1 LANGUAGES CXX)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-# Export compile commands so tools (like VS Code C/C++ extension) can read include paths
-# and flags from build/compile_commands.json. This helps resolve Qt headers for IntelliSense.
+# Export compile commands for VS Code IntelliSense
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
 # Essential for Qt + CMake integration
@@ -14,36 +13,53 @@ set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
 set(CMAKE_AUTOUIC ON)
 
-# Find the Qt6 package and its required components (added Sql for your database)
-find_package(Qt6 REQUIRED COMPONENTS Widgets Sql)
-
-# For mac
-if(APPLE)
-  list(APPEND CMAKE_PREFIX_PATH "/opt/homebrew/opt/qt6")
+# Windows
+set(QT_ROOT "C:/Qt/6.9.2/mingw_64")
+set(CMAKE_PREFIX_PATH "${QT_ROOT}/lib/cmake")
+set(WINDEPLOYQT_EXECUTABLE "${QT_ROOT}/bin/windeployqt.exe")
+if (WIN32)
+    set(CMAKE_PREFIX_PATH "C:/Qt/6.9.2/mingw_64/lib/cmake")
 endif()
 
-# Use the modern Qt6 way to create the executable
+# For macOS
+if(APPLE)
+    list(APPEND CMAKE_PREFIX_PATH "/opt/homebrew/opt/qt6")
+endif()
+
+# Find the Qt6 package and its components
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)
+
+# Create the executable
 qt_add_executable(SnipBoard
+    MANUAL_FINALIZATION
     src/main.cpp
     src/gui/mainwindow.h
     src/gui/mainwindow.cpp
     src/gui/mainwindow.ui
-    # As you add more source files, list them here
 )
 
 # Set properties for creating proper application bundles on macOS and Windows
 set_target_properties(SnipBoard PROPERTIES
-    MACOSX_BUNDLE_GUI_IDENTIFIER com.snipboard.SnipBoard # Change this to be unique
+    MACOSX_BUNDLE_GUI_IDENTIFIER com.snipboard.SnipBoard
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
     MACOSX_BUNDLE_SHORT_VERSION_STRING ${PROJECT_VERSION_MAJOR}.${PROJECT_VERSION_MINOR}
     WIN32_EXECUTABLE TRUE
 )
 
-# Link the required Qt libraries to our executable
+# Link the required Qt libraries
 target_link_libraries(SnipBoard PRIVATE
-    Qt6::Widgets
-    Qt6::Sql
+    Qt${QT_VERSION_MAJOR}::Widgets
+    Qt${QT_VERSION_MAJOR}::Sql
 )
 
-# Finalize the executable (part of the modern Qt6 CMake API)
+
+# Finalize the executable
 qt_finalize_executable(SnipBoard)
+
+if (WIN32)
+    add_custom_command(TARGET SnipBoard POST_BUILD
+        COMMAND "${WINDEPLOYQT_EXECUTABLE}" "$<TARGET_FILE:SnipBoard>" --verbose 1
+        COMMENT "Running windeployqt to bundle Qt dependencies..."
+    )
+endif()
