--- a/.gitignore
+++ b/.gitignore
@@ -5,11 +5,13 @@ CMakeCache.txt
 CMakeFiles/
 cmake_install.cmake
 compile_commands.json
+Generated/
 
 # IDE and user-specific files
 .vscode/
 *.user
 CMakeUserPresets.json
+**/.qmlls.ini
 
 # Keep separate databases
 #*.db
