--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,11 +1,12 @@
 # SNIPBOARD CMAKE CONFIGURATION
-cmake_minimum_required(VERSION 3.16)
+cmake_minimum_required(VERSION 3.19)
 project(SnipBoard VERSION 0.1 LANGUAGES CXX)
 
 # General configuration
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+set(QT_QML_GENERATE_QMLLS_INI ON)
 
 set(CMAKE_AUTOMOC ON)
 set(CMAKE_AUTORCC ON)
@@ -16,31 +17,38 @@ if (WIN32)
     set(QT_ROOT "C:/Qt/6.9.2/mingw_64")
     set(CMAKE_PREFIX_PATH "${QT_ROOT}/lib/cmake")
     set(WINDEPLOYQT_EXECUTABLE "${QT_ROOT}/bin/windeployqt.exe")
-
 elseif(APPLE)
     list(APPEND CMAKE_PREFIX_PATH "/opt/homebrew/opt/qt6")
     find_program(MACDEPLOYQT_EXECUTABLE macdeployqt HINTS "/opt/homebrew/opt/qt6/bin")
-
 elseif(UNIX)
     list(APPEND CMAKE_PREFIX_PATH "/usr/lib/x86_64-linux-gnu/cmake/Qt6")
     find_program(LINUXDEPLOYQT_EXECUTABLE linuxdeployqt)
 endif()
 
 # Find Qt Libraries
-find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Widgets Sql)
-find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Widgets Sql)
+find_package(QT NAMES Qt6 Qt5 REQUIRED COMPONENTS Core Qml Quick Sql)
+find_package(Qt${QT_VERSION_MAJOR} REQUIRED COMPONENTS Core Qml Quick Sql)
 
-# Build Target
+# ADDED: Set Qt policies to resolve warnings
+qt_policy(SET QTP0001 NEW)
+qt_policy(SET QTP0004 NEW)
+
 qt_add_executable(SnipBoard
     MANUAL_FINALIZATION
     MACOSX_BUNDLE
     src/main.cpp
-    src/gui/mainwindow.h
-    src/gui/mainwindow.cpp
-    src/gui/mainwindow.ui
+    # Add other c++ files here
 )
 
+qt_add_qml_module(SnipBoard
+    URI SnipBoard
+    VERSION 1.0
+    RESOURCE_PREFIX "/qt/qml"
+    QML_FILES
+        src/gui/main.qml
+)
 
+# CHANGED: Updated target properties to use the new executable name
 set_target_properties(SnipBoard PROPERTIES
     MACOSX_BUNDLE_GUI_IDENTIFIER com.snipboard.SnipBoard
     MACOSX_BUNDLE_BUNDLE_VERSION ${PROJECT_VERSION}
@@ -48,16 +56,21 @@ set_target_properties(SnipBoard PROPERTIES
     WIN32_EXECUTABLE TRUE
 )
 
+# CHANGED: Updated target_link_libraries to use the new executable name
 target_link_libraries(SnipBoard PRIVATE
-    Qt${QT_VERSION_MAJOR}::Widgets
+    Qt${QT_VERSION_MAJOR}::Core
+    Qt${QT_VERSION_MAJOR}::Qml
+    Qt${QT_VERSION_MAJOR}::Quick
     Qt${QT_VERSION_MAJOR}::Sql
 )
 
+# CHANGED: Updated qt_finalize_executable to use the new executable name
 qt_finalize_executable(SnipBoard)
 
 # Post-build Deployment Steps (link Qt requirements)
 if (WIN32)
     if (EXISTS "${WINDEPLOYQT_EXECUTABLE}")
+        # CHANGED: Updated the deployment command to use the new executable name
         add_custom_command(TARGET SnipBoard POST_BUILD
             COMMAND "${WINDEPLOYQT_EXECUTABLE}" "$<TARGET_FILE:SnipBoard>" --no-translations --verbose 1
             COMMENT "Running windeployqt to bundle Qt dependencies..."
@@ -65,9 +78,9 @@ if (WIN32)
     else()
         message(WARNING "windeployqt not found at ${WINDEPLOYQT_EXECUTABLE}")
     endif()
-
 elseif(APPLE)
     if (MACDEPLOYQT_EXECUTABLE)
+        # CHANGED: Updated the deployment command to use the new executable name
         add_custom_command(TARGET SnipBoard POST_BUILD
             COMMAND "${MACDEPLOYQT_EXECUTABLE}"
                 "$<TARGET_BUNDLE_DIR:SnipBoard>"
@@ -80,10 +93,9 @@ elseif(APPLE)
     else()
         message(WARNING "macdeployqt not found. Install Qt with: brew install qt")
     endif()
-
-
 elseif(UNIX)
     if (LINUXDEPLOYQT_EXECUTABLE)
+        # CHANGED: Updated the deployment command to use the new executable name
         add_custom_command(TARGET SnipBoard POST_BUILD
             COMMAND "${LINUXDEPLOYQT_EXECUTABLE}" "$<TARGET_FILE:SnipBoard>" -appimage
             COMMENT "Running linuxdeployqt to bundle Qt libraries..."
