Reconfigured CMake and added font.ttf files.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,8 @@ qt_add_qml_module(SnipBoard
     RESOURCE_PREFIX "/qt/qml"
     QML_FILES
         src/gui/main.qml
+        src/gui/settings.qml
+        src/gui/home.qml
 )
 
 # CHANGED: Updated target properties to use the new executable name
