Updated CMake to include colors.qml

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -48,6 +48,7 @@ qt_add_qml_module(SnipBoard
         src/gui/main.qml
         src/gui/settings.qml
         src/gui/home.qml
+        src/gui/colors.qml
 )
 
 # CHANGED: Updated target properties to use the new executable name
