Added new files and folder structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,9 +46,10 @@ qt_add_qml_module(SnipBoard
     RESOURCE_PREFIX "/qt/qml"
     QML_FILES
         src/gui/main.qml
-        src/gui/settings.qml
-        src/gui/home.qml
-        src/gui/colors.qml
+        src/gui/pages/settings.qml
+        src/gui/pages/colors.qml
+        src/gui/pages/new_snippet.qml
+        src/gui/pages/home.qml
 )
 
 # CHANGED: Updated target properties to use the new executable name
