--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,10 @@ build.sh
 CMakeUserPresets.json
 **/.qmlls.ini
 *.cache
+*.autosave*
 
 # Keep separate databases
-#*.db
+*.db
 
 # OS-specific files
 .DS_Store
