Snippet Repository path additions

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ set(HEADERS
     src/core/objects/SnippetListModel.h
     src/core/objects/TagListModel.h
     src/core/objects/FolderTreeModel.h
+    src/core/repositories/SnippetsRepository.h
 )
 
 # Add c++ to be compiled
@@ -58,6 +59,7 @@ qt_add_executable(SnipBoard
     src/core/objects/SnippetListModel.cpp
     src/core/objects/TagListModel.cpp
     src/core/objects/FolderTreeModel.cpp
+    src/core/repositories/SnippetsRepository.cpp
     # Add other c++ files here
 )
 
