Implemented cpp version of copy2clipboard. Still doesnt work with the snippets code though :(

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -46,6 +46,7 @@ set(HEADERS
     src/core/objects/FolderTreeModel.h
     src/core/repositories/SnippetRepository.h
     src/core/services/SnippetService.h
+    src/core/utils/ClipboardHelper.h
 )
 
 # Add c++ to be compiled
